# kolibri

./: Cargo.toml  readme.md
.github/workflows/: ci.yml
examples/: dummy.json  js-eval.json  key-value-storage.json
src/: api.rs  main.rs  misc.rs  model.rs  prelude.js  sanboxing.rs  utils.rs
src/api/: exec.rs  model.rs  resolver.rs
src/model/: persistent.rs  sql_json.rs
src/predicate_dsl/: json.rs  keyword.rs
src/utils/: transformations.rs
src/utils/js/: optic.rs
src/utils/transformations/: js.rs
