[package]
name = "kolibri"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-http = "3.8"
http = "0.2"
tokio = "1"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
serde_regex = "1"
regex = "1.*"
bigdecimal = "0.4"
once_cell = "1.*"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
simple_logger = { version = "5", features = ["timestamps"]}
clap = { version = "4.*", features = ["derive"]}